--- a/content/post/2020-10-05-r-kodu-ornek/index.tr.Rmd
+++ b/content/post/2020-10-05-r-kodu-ornek/index.tr.Rmd
@@ -18,12 +18,16 @@ image:
   preview_only: false
 projects: []
 output:
-  blogdown::html_page:
+  blogdown::html_document:
     number_sections: true
     toc: true
     toc_depth: 2
     # mathjax: local
     # self_contained: false
+    theme: united
+    toc_float:
+      collapsed: no
+      smooth_scroll: yes
 disable_codefolding: false ## Set to true to disable code folding.
 codefolding_show: "show" ## Set to "hide" or "show" all codes by default.
 codefolding_nobutton: false ## Set to true to exclude the "Show/hide all" button.
