--- a/content/courses/ekonometri-i/_index.Rmd
+++ b/content/courses/ekonometri-i/_index.Rmd
@@ -5,8 +5,8 @@ summary: "Verildiği son bölüm ve dönem: İktisat Bölümü - Güz 2020"
 weight: 30
 
 # Page metadata.
-title: "Ekonomiye Giriş I"
-date: "Ekonometri I"
+title: "Ekonometri I"
+date: "2020-10-05"
 lastmod: "2020-10-14"
 draft: false
 # toc: true
