--- a/content/courses/economics/1-documents.Rmd
+++ b/content/courses/economics/1-documents.Rmd
@@ -1,15 +1,15 @@
 ---
-title: Önemli Dokümanlar
-linktitle: Dokümanlar
+title: Important Documents
+linktitle: Documents
 date: "2020-10-05"
-lastmod: "2020-10-14"
+lastmod: "2020-10-13"
 draft: false
 # toc: true
 type: docs
 
 menu:
-  ekonometri-i:
-    name: Dokümanlar
+  economics:
+    name: Documents
     weight: 20
 
 # Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
