--- a/content/courses/economics/4-lectures.Rmd
+++ b/content/courses/economics/4-lectures.Rmd
@@ -30,14 +30,14 @@ eng <- "us"
 {{% /alert %}}
 
 ## Hafta #1
-| &nbsp; &nbsp; &nbsp; Türkçe `r emo::ji(tr)` &nbsp; &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp; İngilizce `r emo::ji(eng)` &nbsp; &nbsp; &nbsp; |
-| :--------------------: | :------------------------: |
+| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| :-------------------- | :------------------------ |
 | [Video - Bölüm #1](https://www.youtube.com/watch?v=2X_-CiNAr6w&feature=youtu.be) | [Video - Bölüm #1](https://www.youtube.com/watch?v=rEZfMve6Vm0&feature=youtu.be) |
 | [Video - Bölüm #2](https://www.youtube.com/watch?v=jeNwjaAVs4o&feature=youtu.be) | [Video - Bölüm #2](https://www.youtube.com/watch?v=1wAclMe5c6M&feature=youtu.be) |
 | [Slaytlar](`r paste0(ekonomi.path, "Ekonomi - Hafta 1 (Kara).pptx")`) | [Slaytlar](`r paste0(economics.path, "Economics - Week 1 (Kara).pptx")`) |
-| [Notlar](`r paste0(ekonomi.path, "Ekonomi - Hafta 1 Notlar (Kara).pdf")`) `r emo::ji(in.progress)` | [Notlar](`r paste0(economics.path, "Economics - Week 1 Notes (Kara).pdf")`) `r emo::ji(to.be.updated)` |
-| [Çalışma Soruları](`r paste0(ekonomi.path, "Ekonomi - Hafta 1 CS (Kara).pdf")`) `r emo::ji(in.progress)` | [Çalışma Soruları](`r paste0(economics.path, "Economics - Week 1 Worksheet (Kara).pdf")`) `r emo::ji(to.be.updated)` |
-| [Çalışma Soruları Cevaplar](`r paste0(ekonomi.path, "Ekonomi - Hafta 1 CS Cevaplar (Kara).pdf")`) `r emo::ji(in.progress)` | [Çalışma Soruları Cevaplar](`r paste0(economics.path, "Economics - Week 1 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
+| [Notlar](`r paste0(ekonomi.path, "Ekonomi - Hafta 1 Notlar (Kara).pdf")`) `r emo::ji(to.be.updated)` | [Notlar](`r paste0(economics.path, "Economics - Week 1 Notes (Kara).pdf")`) `r emo::ji(to.be.updated)` |
+| [Çalışma Soruları](`r paste0(ekonomi.path, "Ekonomi - Hafta 1 CS (Kara).pdf")`) `r emo::ji(to.be.updated)` | [Çalışma Soruları](`r paste0(economics.path, "Economics - Week 1 Worksheet (Kara).pdf")`) `r emo::ji(to.be.updated)` |
+| [Çalışma Soruları Cevaplar](`r paste0(ekonomi.path, "Ekonomi - Hafta 1 CS Cevaplar (Kara).pdf")`) `r emo::ji(to.be.updated)` | [Çalışma Soruları Cevaplar](`r paste0(economics.path, "Economics - Week 1 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #2
 
