--- a/content/courses/economics/01-ce.Rmd
+++ b/content/courses/economics/01-ce.Rmd
@@ -18,19 +18,19 @@ weight: 21
 
 <br>
 
-## Telegram Kanalı
-Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegram](https://telegram.org/) adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.  
+## Telegram Channel
+To inform you about the important announcements related to the course on time, an announcement channel is created in the [Telegram](https://telegram.org/) app. The detailed information can be found on documents below.  
 
-- [Telegram Kanalı Duyurusu](`r paste0(economics.path, "CE/Economics_Telegram Channel Announcement_Info.pdf")`)
-- [QR Kod - Telefon İçin](`r paste0(economics.path, "CE/Economics_Telegram Channel Announcement_Flyer.pdf")`)
+- [Telegram Channel Announcement](`r paste0(economics.path, "CE/Economics_Telegram Channel Announcement_Info.pdf")`)
+- [QR Code - For Phones](`r paste0(economics.path, "CE/Economics_Telegram Channel Announcement_Flyer.pdf")`)
 
-## Ders Planı ve Önemli Günler
-- [Ders Planı](`r paste0(economics.path, "CE/Economics - Syllabus (Kara).pdf")`)
-- [Önemli Günler](`r paste0(economics.path, "CE/Economics - Important Dates (Kara).pdf")`)
+## Syllabus and Important Dates
+- [Syllabus](`r paste0(economics.path, "CE/Economics - Syllabus (Kara).pdf")`)
+- [Important Dates](`r paste0(economics.path, "CE/Economics - Important Dates (Kara).pdf")`)
 
-## Ders Kitabı
-- [Kitap Seçimi Açıklaması](`r paste0(economics.path, "Economics_Book Selection Explanation.pdf")`)
+## Course Book
+- [Book Selection Explanation](`r paste0(economics.path, "Economics_Book Selection Explanation.pdf")`)
 
-## Ders Değerlendirme Anketi
-- [Ders Değerlendirme Anketi - Açıklama](`r paste0(economics.path, "CE/Economics_Course Evaluation Survey.pdf")`)
-- [Ders Değerlendirme Anketi - Link](https://forms.gle/ZfxYYKNxbVcyLaQB8)
+## Course Evaluation Survey
+- [Course Evaluation Survey - Explanation (in Turkish)](`r paste0(economics.path, "CE/Economics_Course Evaluation Survey.pdf")`)
+- [Course Evaluation Survey - Link (in Turkish)](https://forms.gle/ZfxYYKNxbVcyLaQB8)
