--- a/content/courses/economics/02-ee.Rmd
+++ b/content/courses/economics/02-ee.Rmd
@@ -18,26 +18,21 @@ weight: 22
 
 <br>
 
-## Telegram Kanalı
-Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegram](https://telegram.org/) adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.  
+## Telegram Channel
+To inform you about the important announcements related to the course on time, an announcement channel is created in the [Telegram](https://telegram.org/) app. The detailed information can be found on documents below.  
 
-- [Telegram Kanalı Duyurusu](`r paste0(economics.path, "EE/Economics_Telegram Channel Announcement_Info.pdf")`)
-- [QR Kod - Telefon İçin](`r paste0(economics.path, "EE/Economics_Telegram Channel Announcement_Flyer.pdf")`)
+- [Telegram Channel Announcement](`r paste0(economics.path, "EE/Economics_Telegram Channel Announcement_Info.pdf")`)
+- [QR Code - For Phones](`r paste0(economics.path, "EE/Economics_Telegram Channel Announcement_Flyer.pdf")`)
 
-## Ders Planı ve Önemli Günler
-<!-- - [Ders Planı - 1. Öğretim](`r paste0(economics.path, "EE/Economics_NE - Syllabus (Kara).pdf")`) -->
-<!-- - [Önemli Günler - 1. Öğretim](`r paste0(economics.path, "EE/Economics_NE - Important Dates (Kara).pdf")`) -->
-<!-- - [Ders Planı - 2. Öğretim](`r paste0(economics.path, "EE/Economics_SE - Syllabus (Kara).pdf")`) -->
-<!-- - [Önemli Günler - 2. Öğretim](`r paste0(economics.path, "EE/Economics_SE - Important Dates (Kara).pdf")`) -->
+## Syllabus and Important Dates
+| Normal Education | Secondary Education |
+| :--- | :--- |
+| [Syllabus](`r paste0(economics.path, "EE/Economics_NE - Syllabus (Kara).pdf")`) | [Syllabus](`r paste0(economics.path, "EE/Economics_SE - Syllabus (Kara).pdf")`) |
+| [Important Dates](`r paste0(economics.path, "EE/Economics_NE - Important Dates (Kara).pdf")`) | [Important Dates](`r paste0(economics.path, "EE/Economics_SE - Important Dates (Kara).pdf")`) |
 
-| 1. Öğretim | 2. Öğretim |
-| :---: | :---: |
-| [Ders Planı](`r paste0(economics.path, "EE/Economics_NE - Syllabus (Kara).pdf")`) | [Ders Planı](`r paste0(economics.path, "EE/Economics_SE - Syllabus (Kara).pdf")`) |
-| [Önemli Günler](`r paste0(economics.path, "EE/Economics_NE - Important Dates (Kara).pdf")`) | [Önemli Günler](`r paste0(economics.path, "EE/Economics_SE - Important Dates (Kara).pdf")`) |
+## Course Book
+- [Book Selection Explanation](`r paste0(economics.path, "Economics_Book Selection Explanation.pdf")`)
 
-## Ders Kitabı
-- [Kitap Seçimi Açıklaması](`r paste0(economics.path, "Economics_Book Selection Explanation.pdf")`)
-
-## Ders Değerlendirme Anketi
-- [Ders Değerlendirme Anketi - Açıklama](`r paste0(economics.path, "EE/Economics_Course Evaluation Survey.pdf")`)
-- [Ders Değerlendirme Anketi - Link](https://forms.gle/EEd4Whw9pqEPxzeY7)
+## Course Evaluation Survey
+- [Course Evaluation Survey - Explanation (in Turkish)](`r paste0(economics.path, "EE/Economics_Course Evaluation Survey.pdf")`)
+- [Course Evaluation Survey - Link (in Turkish)](https://forms.gle/EEd4Whw9pqEPxzeY7)
