--- a/content/courses/ekonometri-i/1-documents.Rmd
+++ b/content/courses/ekonometri-i/1-documents.Rmd
@@ -19,5 +19,5 @@ weight: 20
 <br>
 
 {{% alert note %}}
-İncelediğiniz ders birden farklı bölüme veriliyor olabilir. Bölümünüzü ilgilendiren önemli dokümanlara bölümünüze ait yandaki linkten ulaşabilirsiniz. Ayrıca diğer doküman, link, video ve bilgilere yan taraftaki linklere tıklayarak ulaşabilirsiniz...
+İncelediğiniz ders birden farklı bölüme veriliyor olabilir. Sizi ilgilendiren önemli dokümanlara bu sayfada sol tarafta bulunan bölümünüze ait linkten ulaşabilirsiniz. Ayrıca diğer doküman, link, video ve bilgilere sol taraftaki taraftaki linklere tıklayarak ulaşabilirsiniz...
 {{% /alert %}}
