--- a/content/courses/ekonomi-i/3-exams-ps.Rmd
+++ b/content/courses/ekonomi-i/3-exams-ps.Rmd
@@ -16,8 +16,28 @@ menu:
 weight: 40
 ---
 
+```{r emoji, include = FALSE}
+to.be.updated <- "arrows_counterclockwise"
+in.progress <- "fire"
+outdated <- "no_entry"
+tr <- "tr"
+eng <- "us"
+```
+
 <br>
 
-## Ekonomiye Giris I
+{{% alert note %}}
+İncelediğiniz sayfada `r emo::ji(tr)` <font color="red">**Türkçe**</font>, `r emo::ji(eng)` <font color="red">**İngilizce**</font>, `r emo::ji(to.be.updated)` <font color="red">**Güncellenecek**</font>, `r emo::ji(in.progress)` <font color="red">**Üzerinde Çalışılan**</font> ve `r emo::ji(outdated)` <font color="red">**Artık Geçerli Olmayan**</font> içerikleri ifade eder...
+{{% /alert %}}
 
-## Exams
+## Ödevler
+- [CANVAS'ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
+    - [DYS'de Online Çoktan Seçmeli Ödev Nasıl Yapılır?](https://www.youtube.com/watch?v=OOqC0JrtOaI&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
+
+## Sınavlar
+- [Ara Sınav - İnceleme](`r paste0(ekonomi.i.path, "Ekonomiye Giris_I - Ara Sinav Inceleme (Kara).pdf")`)
+- [Final Sınavı - İnceleme](`r paste0(ekonomi.i.path, "Ekonomiye Giris_I - Final Sinavi Inceleme (Kara).pdf")`) `r emo::ji(in.progress)`
+- [CANVAS'ta Online Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
+    - [DYS'de Online Sınav Nasıl Yapılır?](https://www.youtube.com/watch?v=V_Oyg-WGoK4&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
+- [CANVAS'ta Online Yazılı Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
+    - [DYS'de Online Yazılı Sınav Nasıl Yapılır?](https://www.youtube.com/watch?v=wsUB6-fTxA8&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
