--- a/content/courses/economics/_index.Rmd
+++ b/content/courses/economics/_index.Rmd
@@ -3,6 +3,8 @@
 linktitle: "Economics"
 summary: "The last taught department and semester: Computer Engineering - Fall 2020 and Electrical-Electronics Engineering  - Fall 2020"
 weight: 50
+categories: [Ders]
+tags: [ekonomi, ingilizce, english]
 
 # Page metadata.
 title: "Economics"
