--- a/content/courses/ekonomi-i/01-st.Rmd
+++ b/content/courses/ekonomi-i/01-st.Rmd
@@ -16,7 +16,19 @@ menu:
 weight: 21
 ---
 
+```{r emoji, include = FALSE}
+to.be.updated <- "arrows_counterclockwise"
+in.progress <- "fire"
+outdated <- "no_entry"
+tr <- "tr"
+eng <- "us"
+```
+
 <br>
+
+{{% alert note %}}
+İncelediğiniz sayfada `r emo::ji(tr)` <font color="red">**Türkçe**</font>, `r emo::ji(eng)` <font color="red">**İngilizce**</font>, `r emo::ji(to.be.updated)` <font color="red">**Güncellenecek**</font>, `r emo::ji(in.progress)` <font color="red">**Üzerinde Çalışılan**</font> ve `r emo::ji(outdated)` <font color="red">**Artık Geçerli Olmayan**</font> içerikleri ifade eder...
+{{% /alert %}}
 
 ## Telegram Kanalı
 Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegram](https://telegram.org/) adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.  
@@ -25,8 +37,8 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 - [QR Kod - Telefon İçin](`r paste0(ekonomi.i.path, "ST/Ekonomiye Giris_I_Telegram Kanali Duyurusu_Ilan.pdf")`)
 
 ## Ders Planı ve Önemli Günler
-- [Ders Planı](`r paste0(ekonomi.i.path, "ST/Ekonomiye Giris_I - Ders Plani (Kara).pdf")`)  
-- [Önemli Günler](`r paste0(ekonomi.i.path, "ST/Ekonomiye Giris_I - Onemli Gunler (Kara).pdf")`)
+- [Ders Planı](`r paste0(ekonomi.i.path, "ST/Ekonomiye Giris_I - Ders Plani (Kara).pdf")`) `r emo::ji(to.be.updated)`
+- [Önemli Günler](`r paste0(ekonomi.i.path, "ST/Ekonomiye Giris_I - Onemli Gunler (Kara).pdf")`) `r emo::ji(to.be.updated)`
 
 ## Ders Kitabı
 - [Kitap Seçimi Açıklaması](`r paste0(ekonomi.i.path, "Ekonmiye Giris_I_Kitap Secimi Aciklamasi (Kara).pdf")`)
