--- a/content/courses/ekonomi-i/_index.Rmd
+++ b/content/courses/ekonomi-i/_index.Rmd
@@ -3,6 +3,8 @@
 linktitle: "Ekonomiye Giriş I"
 summary: "Verildiği son bölüm ve dönem: İstatistik - Güz 2020"
 weight: 90
+categories: [Ders]
+tags: [ekonomi I, türkçe, turkish]
 
 # Page metadata.
 title: "Ekonomiye Giriş I"
