--- a/content/courses/economics/01-ce.Rmd
+++ b/content/courses/economics/01-ce.Rmd
@@ -16,7 +16,19 @@ menu:
 weight: 21
 ---
 
+```{r emoji, include = FALSE}
+to.be.updated <- "arrows_counterclockwise"
+in.progress <- "fire"
+outdated <- "no_entry"
+tr <- "tr"
+eng <- "us"
+```
+
 <br>
+
+{{% alert note %}}
+On the page you are reviewing, the icons and the contents they refer are as follows: `r emo::ji(tr)` <font color="red">**Turkish**</font>, `r emo::ji(eng)` <font color="red">**English**</font>, `r emo::ji(to.be.updated)` <font color="red">**Will be Updated**</font>, `r emo::ji(in.progress)` <font color="red">**In Progress**</font>, and `r emo::ji(outdated)` <font color="red">**No Longer Valid**</font>.
+{{% /alert %}}
 
 ## Telegram Channel
 To inform you about the important announcements related to the course on time, an announcement channel is created in the [Telegram](https://telegram.org/) app. The detailed information can be found on documents below.  
@@ -25,8 +37,8 @@ To inform you about the important announcements related to the course on time, a
 - [QR Code - For Phones](`r paste0(economics.path, "CE/Economics_Telegram Channel Announcement_Flyer.pdf")`)
 
 ## Syllabus and Important Dates
-- [Syllabus](`r paste0(economics.path, "CE/Economics - Syllabus (Kara).pdf")`)
-- [Important Dates](`r paste0(economics.path, "CE/Economics - Important Dates (Kara).pdf")`)
+- [Syllabus](`r paste0(economics.path, "CE/Economics - Syllabus (Kara).pdf")`) `r emo::ji(to.be.updated)`
+- [Important Dates](`r paste0(economics.path, "CE/Economics - Important Dates (Kara).pdf")`) `r emo::ji(to.be.updated)`
 
 ## Course Book
 - [Book Selection Explanation](`r paste0(economics.path, "Economics_Book Selection Explanation.pdf")`)
