--- a/content/courses/ekonomi/_index.Rmd
+++ b/content/courses/ekonomi/_index.Rmd
@@ -3,6 +3,8 @@
 linktitle: "Ekonomi"
 summary: "Verildiği son bölüm ve dönem: Metalurji ve Malzeme Mühendisliği - Bahar 2019 ve Endüstri Mühendisliği - Bahar 2020"
 weight: 60
+categories: [Ders]
+tags: [ekonomi, türkçe, turkish]
 
 # Page metadata.
 title: "Ekonomi"
