--- a/content/courses/ekonomi-i/4-lectures.Rmd
+++ b/content/courses/ekonomi-i/4-lectures.Rmd
@@ -31,7 +31,7 @@ eng <- "us"
 {{% /alert %}}
 
 ## Hafta #1
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video - Bölüm #1](https://www.youtube.com/watch?v=2X_-CiNAr6w&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=1) | [Video - Part #1](https://www.youtube.com/watch?v=rEZfMve6Vm0&list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg&index=1) |
 | [Video - Bölüm #2](https://www.youtube.com/watch?v=jeNwjaAVs4o&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=2) | [Video - Part #2](https://www.youtube.com/watch?v=1wAclMe5c6M&list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg&index=2) |
@@ -41,7 +41,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar](`r paste0(ekonomi.path, "Ekonomi - Hafta 1 CS Cevaplar (Kara).pdf")`) `r emo::ji(to.be.updated)` | [Worksheet Solutions](`r paste0(economics.path, "Economics - Week 1 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #2
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video](https://www.youtube.com/watch?v=JIpF9at8540&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=3) | [Video](https://www.youtube.com/watch?v=Z347BG3oFn4&list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg&index=3) |
 | [Slaytlar](`r paste0(ekonomi.path, "Ekonomi - Hafta 2 (Kara).pptx")`) | [Slides](`r paste0(economics.path, "Economics - Week 2 (Kara).pptx")`) |
@@ -50,7 +50,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar](`r paste0(ekonomi.path, "Ekonomi - Hafta 2 CS Cevaplar (Kara).pdf")`) `r emo::ji(in.progress)` | [Worksheet Solutions](`r paste0(economics.path, "Economics - Week 2 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #3
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video - Bölüm #1](https://www.youtube.com/watch?v=akfocLbvXjM&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=4) | [Video - Part #1](https://www.youtube.com/watch?v=T7EQqHhbAgk&list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg&index=4) |
 | [Video - Bölüm #2](https://www.youtube.com/watch?v=Ykk_oeJiE_I&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=5) | [Video - Part #2](https://www.youtube.com/watch?v=Xudjskkv47U&list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg&index=5) |
@@ -61,7 +61,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar - Grafiksel](`r paste0(ekonomi.path, "Ekonomi - Hafta 3 CS Cevaplar__Grafiksel (Kara).pdf")`) `r emo::ji(in.progress)` | [Worksheet Solutions - Graphical](`r paste0(economics.path, "Economics - Week 3 Worksheet Solutions__Graphical (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #4
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video - Bölüm #1](https://www.youtube.com/watch?v=ggTcdWCzMq0&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=6) | [Video - Part #1](https://www.youtube.com/watch?v=KKY6iOTOQHI&list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg&index=6) |
 | [Video - Bölüm #2](https://www.youtube.com/watch?v=n4lnYcVw4z0&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=7) | [Video - Part #2](https://www.youtube.com/watch?v=E4YhqVQ3TDk&list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg&index=7) |
@@ -71,7 +71,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar](`r paste0(ekonomi.path, "Ekonomi - Hafta 4 CS Cevaplar (Kara).pdf")`) `r emo::ji(in.progress)` | [Worksheet Solutions](`r paste0(economics.path, "Economics - Week 4 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #5
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video - Bölüm #1](https://www.youtube.com/watch?v=tHFcUR5oW-Q&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=8) | [Video - Part #1]() `r emo::ji(in.progress)` |
 | [Video - Bölüm #2](https://www.youtube.com/watch?v=KT5QKjJ7ub0&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=9) | [Video - Part #2]() `r emo::ji(in.progress)` |
@@ -84,7 +84,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar - Grafiksel](`r paste0(ekonomi.path, "Ekonomi - Hafta 5 CS Cevaplar__Grafiksel (Kara).pdf")`) `r emo::ji(in.progress)` | [Worksheet Solutions - Graphical](`r paste0(economics.path, "Economics - Week 5 Worksheet Solutions__Graphical (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #6
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video - Bölüm #1](https://www.youtube.com/watch?v=QJKhDzAnvRA&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=11) | [Video - Part #1]() `r emo::ji(in.progress)` |
 | [Video - Bölüm #2](https://www.youtube.com/watch?v=ebzskGeYMgo&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=12) | [Video - Part #2]() `r emo::ji(in.progress)` |
@@ -95,7 +95,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar](`r paste0(ekonomi.path, "Ekonomi - Hafta 6 CS Cevaplar (Kara).pdf")`) `r emo::ji(in.progress)` | [Worksheet Solutions](`r paste0(economics.path, "Economics - Week 6 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #7
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video - Bölüm #1](https://www.youtube.com/watch?v=uACsAqu3Z-4&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=13) | [Video - Part #1]() `r emo::ji(in.progress)` |
 | [Video - Bölüm #2](https://www.youtube.com/watch?v=Unc85Ih2sIE&list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY&index=14) | [Video - Part #2]() `r emo::ji(in.progress)` |
@@ -105,7 +105,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar](`r paste0(ekonomi.path, "Ekonomi - Hafta 7 CS Cevaplar (Kara).pdf")`) `r emo::ji(in.progress)` | [Worksheet Solutions](`r paste0(economics.path, "Economics - Week 7 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #8
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video]() `r emo::ji(in.progress)` | [Video]() `r emo::ji(in.progress)` |
 | [Slaytlar](`r paste0(ekonomi.i.path, "Ekonomiye Giris_I - Hafta 8 (Kara).pptx")`) | [Slides](`r paste0(ekonomi.i.path, "Economics_I - Week 8 (Kara).pptx")`) |
@@ -114,7 +114,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar](`r paste0(ekonomi.i.path, "Ekonomiye Giris_I - Hafta 8 CS Cevaplar (Kara).pdf")`) `r emo::ji(in.progress)` | [Worksheet Solutions](`r paste0(ekonomi.i.path, "Economics_I - Week 8 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #9
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video]() `r emo::ji(in.progress)` | [Video]() `r emo::ji(in.progress)` |
 | [Slaytlar](`r paste0(ekonomi.i.path, "Ekonomiye Giris_I - Hafta 9 (Kara).pptx")`) | [Slides](`r paste0(ekonomi.i.path, "Economics_I - Week 9 (Kara).pptx")`) |
@@ -123,7 +123,7 @@ eng <- "us"
 | [Çalışma Soruları Cevaplar](`r paste0(ekonomi.i.path, "Ekonomiye Giris_I - Hafta 9 CS Cevaplar (Kara).pdf")`) `r emo::ji(in.progress)` | [Worksheet Solutions](`r paste0(ekonomi.i.path, "Economics_I - Week 9 Worksheet Solutions (Kara).pdf")`) `r emo::ji(to.be.updated)` |
 
 ## Hafta #10
-| Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
+| Türkçe `r emo::ji(tr)` | English `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
 | [Video]() `r emo::ji(in.progress)` | [Video]() `r emo::ji(in.progress)` |
 | [Slaytlar](`r paste0(ekonomi.i.path, "Ekonomiye Giris_I - Hafta 10 (Kara).pptx")`) `r emo::ji(in.progress)` | [Slides](`r paste0(ekonomi.i.path, "Economics_I - Week 10 (Kara).pptx")`) |
