--- a/content/courses/ekonomi/01-me.Rmd
+++ b/content/courses/ekonomi/01-me.Rmd
@@ -33,16 +33,16 @@ eng <- "us"
 ## Telegram Kanalı
 Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegram](https://telegram.org/) adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.  
 
-- [Telegram Kanalı Duyurusu](`r paste0(ekonomi.path, "ME/Ekonomi_Telegram Kanali Duyurusu_Bilgilendirme.pdf")`)
-- [QR Kod - Telefon İçin](`r paste0(ekonomi.path, "ME/Ekonomi_Telegram Kanali Duyurusu_Ilan.pdf")`)
+- [Telegram Kanalı Duyurusu](`r paste0(ekonomi.path, "ME/Ekonomi_Telegram Kanali Duyurusu_Bilgilendirme.pdf")`) `r emo::ji(tr)`
+- [QR Kod - Telefon İçin](`r paste0(ekonomi.path, "ME/Ekonomi_Telegram Kanali Duyurusu_Ilan.pdf")`) `r emo::ji(tr)`
 
 ## Ders Planı ve Önemli Günler
-- [Ders Planı](`r paste0(ekonomi.path, "ME/Ekonomi - Ders Plani (Kara).pdf")`) `r emo::ji(to.be.updated)`
-- [Önemli Günler](`r paste0(ekonomi.path, "ME/Ekonomi - Onemli Gunler (Kara).pdf")`) `r emo::ji(to.be.updated)`
+- [Ders Planı](`r paste0(ekonomi.path, "ME/Ekonomi - Ders Plani (Kara).pdf")`) `r emo::ji(tr)` `r emo::ji(to.be.updated)`
+- [Önemli Günler](`r paste0(ekonomi.path, "ME/Ekonomi - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)` `r emo::ji(to.be.updated)`
 
 ## Ders Kitabı
-- [Kitap Seçimi Açıklaması](`r paste0(ekonomi.path, "Ekonomi_Kitap Secimi Aciklamasi (Kara).pdf")`)
+- [Kitap Seçimi Açıklaması](`r paste0(ekonomi.path, "Ekonomi_Kitap Secimi Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
 
 ## Ders Değerlendirme Anketi
-- [Ders Değerlendirme Anketi - Açıklama](`r paste0(ekonomi.path, "ME/Ekonomi_Ders Degerlendirme Anketi.pdf")`)
-- [Ders Değerlendirme Anketi - Link](https://forms.gle/jaPVY8msCDwfCqvJ7)
+- [Ders Değerlendirme Anketi - Açıklama](`r paste0(ekonomi.path, "ME/Ekonomi_Ders Degerlendirme Anketi.pdf")`) `r emo::ji(tr)`
+- [Ders Değerlendirme Anketi - Link](https://forms.gle/jaPVY8msCDwfCqvJ7) `r emo::ji(tr)`
