--- a/content/courses/ekonomi/2-links-docs.Rmd
+++ b/content/courses/ekonomi/2-links-docs.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Önemli Linkler
-linktitle: Linkler
+title: Önemli Link ve Diğer Dokümanlar
+linktitle: Link ve Diğer Dokümanlar
 date: "2020-10-05"
 lastmod: "2020-10-13"
 draft: false
@@ -17,11 +17,11 @@ weight: 30
 ---
 
 ```{r emoji, include = FALSE}
+tr <- "tr"
+eng <- "us"
 to.be.updated <- "arrows_counterclockwise"
 in.progress <- "fire"
 outdated <- "no_entry"
-tr <- "tr"
-eng <- "us"
 ```
 
 <br>
@@ -33,14 +33,17 @@ eng <- "us"
 ## Akademi Ekonometri
 - [Akademi Ekonometri - YouTube Kanalı](https://www.youtube.com/c/AkademiEkonometri) `r emo::ji(tr)`
 - [Ekonomi - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch) `r emo::ji(tr)`
-    + [Ekonomi - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f) `r emo::ji(tr)``r emo::ji(to.be.updated)`
-- [Economics - Course Videos (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg) `r emo::ji(eng)``r emo::ji("fire")`
-    + [Economics - Online-Class (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU) `r emo::ji(eng)``r emo::ji(to.be.updated)`
+    + [Ekonomi - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f) `r emo::ji(tr)` `r emo::ji(to.be.updated)`
+- [Economics - Course Videos (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg) `r emo::ji(eng)` `r emo::ji(in.progress)`
+    + [Economics - Online-Class (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU) `r emo::ji(eng)` `r emo::ji(to.be.updated)`
+
+## Diğer Dokümanlar
+- `r emo::ji(in.progress)`
 
 ## Online-Ders
 - [Microsoft Teams - Konuk Olarak Online Derse Bağlanma](https://www.youtube.com/watch?v=dP1UaNDRJxY&list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&index=1) `r emo::ji(tr)`
-- [CANVAS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar) `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe) `r emo::ji(tr)``r emo::ji(outdated)`
+- [CANVAS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar) `r emo::ji(tr)` `r emo::ji(in.progress)`
+    - [DYS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe) `r emo::ji(tr)` `r emo::ji(outdated)`
 
 ## Diğer Linkler
 - [YÖK Dersleri Platformu](https://yokdersleri.yok.gov.tr/) `r emo::ji(tr)`
