--- a/content/courses/economics/01-ce.Rmd
+++ b/content/courses/economics/01-ce.Rmd
@@ -37,8 +37,10 @@ To inform you about the important announcements related to the course on time, a
 - [QR Code - For Phones](`r paste0(economics.path, "CE/Economics_Telegram Channel Announcement_Flyer.pdf")`) `r emo::ji(eng)`
 
 ## Syllabus and Important Dates
-- [Syllabus](`r paste0(economics.path, "CE/Economics - Syllabus (Kara).pdf")`) `r emo::ji(eng)` `r emo::ji(to.be.updated)`
-- [Important Dates](`r paste0(economics.path, "CE/Economics - Important Dates (Kara).pdf")`) `r emo::ji(eng)` `r emo::ji(to.be.updated)`
+| Normal Education | Summer School |
+| :--- | :--- |
+| [Syllabus](`r paste0(economics.path, "CE/Economics_NE - Syllabus (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` | [Syllabus](`r paste0(economics.path, "CE/Economics - Syllabus (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` |
+| [Important Dates](`r paste0(economics.path, "CE/Economics_NE - Important Dates (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` | [Important Dates](`r paste0(economics.path, "CE/Economics_NE - Important Dates (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` |
 
 ## Course Book
 - [Book Selection Explanation](`r paste0(economics.path, "Economics_Book Selection Explanation.pdf")`) `r emo::ji(eng)`
