--- a/content/courses/economics/_index.Rmd
+++ b/content/courses/economics/_index.Rmd
@@ -17,7 +17,7 @@ type: docs  # Do not modify.
 # Add menu entry to sidebar.
 menu:
   economics:
-    name: Course Main Page
+    name: Economics
     weight: 10
 ---
 
