--- a/content/courses/ekonomi/_index.Rmd
+++ b/content/courses/ekonomi/_index.Rmd
@@ -17,7 +17,7 @@ type: docs  # Do not modify.
 # Add menu entry to sidebar.
 menu:
   ekonomi:
-    name: Ders Ana Sayfası
+    name: Ekonomi
     weight: 10
 ---
 
