--- a/content/courses/ekonometri-i/01-ec.Rmd
+++ b/content/courses/ekonometri-i/01-ec.Rmd
@@ -37,10 +37,10 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 - [QR Kod - Telefon İçin](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_Telegram Kanali Duyurusu_Ilan.pdf")`) `r emo::ji(tr)`
 
 ## Ders Planı ve Önemli Günler
-| 1. Öğretim | 2. Öğretim |
-| :--- | :--- |
-| [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_1O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)` `r emo::ji(to.be.updated)` | [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_2O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)` `r emo::ji(to.be.updated)` |
-| [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_1O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)` `r emo::ji(in.progress)` | [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_2O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)` `r emo::ji(in.progress)` |
+| 1. Öğretim | 2. Öğretim | Yaz Okulu |
+| :--- | :--- | :--- |
+| [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_1O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)` | [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_2O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)` | [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)` |
+| [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_1O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` | [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_2O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` | [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` |
 
 ## Ders Kitabı
 - [Kitap Seçimi Açıklaması](`r paste0(ekonometri.i.path, "Ekonometri_I_Kitap Secimi Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
