--- a/content/courses/ekonometri-i/_index.Rmd
+++ b/content/courses/ekonometri-i/_index.Rmd
@@ -17,7 +17,7 @@ type: docs  # Do not modify.
 # Add menu entry to sidebar.
 menu:
   ekonometri-i:
-    name: Ders Ana Sayfası
+    name: Ekonometri I
     weight: 10
 ---
 
