--- a/content/courses/ekonomi-i/_index.Rmd
+++ b/content/courses/ekonomi-i/_index.Rmd
@@ -17,7 +17,7 @@ type: docs  # Do not modify.
 # Add menu entry to sidebar.
 menu:
   ekonomi-i:
-    name: Ders Ana Sayfası
+    name: Ekonomiye Giriş I
     weight: 10
 ---
 
